--- a/Modacity/Modacity/ViewController/SideMenuController/sidemenu.storyboard
+++ b/Modacity/Modacity/ViewController/SideMenuController/sidemenu.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14113" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,7 +42,7 @@
                                                     </constraints>
                                                 </imageView>
                                                 <label opaque="NO" userInteractionEnabled="NO" tag="11" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yoP-87-lAB">
-                                                    <rect key="frame" x="60" y="19" width="38" height="17"/>
+                                                    <rect key="frame" x="60" y="18.5" width="38" height="17"/>
                                                     <fontDescription key="fontDescription" name="Lato-Regular" family="Lato" pointSize="14"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
@@ -95,7 +95,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="8Ts-Hg-dKB" firstAttribute="bottom" secondItem="EWs-hb-Hfy" secondAttribute="bottom" id="2Mn-W8-lrJ"/>
+                            <constraint firstAttribute="bottom" secondItem="EWs-hb-Hfy" secondAttribute="bottom" id="2Mn-W8-lrJ"/>
                             <constraint firstItem="EWs-hb-Hfy" firstAttribute="leading" secondItem="8Ts-Hg-dKB" secondAttribute="leading" id="85L-da-m7S"/>
                             <constraint firstItem="l5d-dB-n5y" firstAttribute="leading" secondItem="8Ts-Hg-dKB" secondAttribute="leading" id="8t5-HK-cTm"/>
                             <constraint firstItem="l5d-dB-n5y" firstAttribute="trailing" secondItem="8Ts-Hg-dKB" secondAttribute="trailing" id="bPt-IP-jwh"/>
